--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Shortcut: `link:css` -->
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>login</title>
@@ -20,25 +20,25 @@
       <div class="status-bar__column">
         <span>99%</span>
         <!-- Battery Icon -->
-        <i class="fas fa-battery-full"></i>
+        <i class="fas fa-battery-full fa-lg"></i>
         <!-- Lightning Icon -->
         <i class="fas fa-bolt"></i>
       </div>
     </div>
 
     <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to Kakao Clone</h1>
+      <h1 class="welcome-header__title">Welcome to KakaoClone</h1>
       <p class="welcome-header__text">
         If you have a Kokoa Account, log in with your email or phone number.
       </p>
     </header>
 
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
-      <input type="submit" placeholder="Log In" />
-      <input type="submit" placeholder="Sign Up" />
-      <a href="#">Find Kakao Account or Password</a>
+    <form class="login-form" action="friends-list.html" method="get">
+      <input class="login-form__input" required name="username" type="text" placeholder="Email or phone number" />
+      <input class="login-form__input" required name="password" type="password" placeholder="Password" />
+      <input class="login-form__btn" name="submit" type="submit" value="Log In" />
+      <input class="login-form__btn" name="submit" type="submit" value="Sign Up" />
+      <a class="login-form__a" href="#">Find Kakao Account or Password</a>
     </form>
 
     <script
