--- a/find.html
+++ b/find.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chats | KakaoClone</title>
+    <title>Find | KakaoClone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -27,59 +27,62 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
+      <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="far fa-comment-dots fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
-        <span
-          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
-        ></span>
+        <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
       </div>
     </header>
 
     <main class="main-screen">
-      <a href="chat-screen.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="./img/umma.png"
-              class="user-component__avatar user-component__avatar"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">엄마</h4>
-              <h6 class="user-component__subtitle">
-                새 메세지가 도착했습니다
-              </h6>
+      <div class="icon-row">
+        <div class="icon-row__icon">
+          <i class="fas fa-qrcode"></i>
+          <span>QR Code</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="far fa-address-book"></i>
+          <span>&nbsp&nbspAdd by Contacts</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-fingerprint"></i>
+          <span>Add by ID</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="far fa-envelope"></i>
+          <span>Invite</span>
+        </div>
+      </div>
+      <div class="recommended-friends">
+        <h6 class="recommended-friends__title">Recommended Friends</h6>
+        <span>You have no recommended friends.</span>
+      </div>
+      <div class="open-chat">
+        <div class="open-chat__header">
+          <h4 class="open-chat__title">Open Chat</h4>
+          <span
+            >Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i
+          ></span>
+        </div>
+        <div class="open-post">
+          <div class="open-post__column">
+            <h5 class="open-post__title">#BTS</h5>
+            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <div class="open-post__members">
+              <img src="./img/bts_1.jpg" />
+              <span class="open-post__member-count">802 members</span>
+              <div class="divider"></div>
+              <span class="open-post__member-status">Active</span>
             </div>
           </div>
-          <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
-            <div class="badge">1</div>
-          </div>
-        </div>
-      </a>
-
-      <a href="chat-screen(1).html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="./img/6000.png"
-              class="user-component__avatar user-component__avatar"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">류천</h4>
-              <h6 class="user-component__subtitle">
-                새 메세지가 도착했습니다
-              </h6>
+          <div class="open-post__column">
+            <div class="open-post__photo">
+              <img src="./img/bts_1.jpg" />
+              <div class="open-post__heart-count"><i class="fas fa-heart fa-xs"></i><span>326</span></div>
             </div>
           </div>
-          <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
-            <div class="badge">1</div>
-          </div>
         </div>
-      </a>
+      </div>
     </main>
 
     <nav class="nav">
@@ -93,7 +96,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">N</span>
-            <i class="fas fa-comment fa-2x"></i>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
