--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       <a class="login-form__a" href="#">Find Kakao Account or Password</a>
 		</form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big!</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/df8f48d4e8.js"
       crossorigin="anonymous"
