--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chats | KakaoClone</title>
+    <title>More | KakaoClone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -27,59 +27,69 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
+      <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="far fa-comment-dots fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span
-          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
-        ></span>
+        <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
       </div>
     </header>
 
-    <main class="main-screen">
-      <a href="chat-screen.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="./img/umma.png"
-              class="user-component__avatar user-component__avatar"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">엄마</h4>
-              <h6 class="user-component__subtitle">
-                새 메세지가 도착했습니다
-              </h6>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
-            <div class="badge">1</div>
+    <main class="main-screen more-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="./img/esquilo.png"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Esquilo</h4>
+            <h6 class="user-component__subtitle">
+              +1 925-888-1450<span class="user-component__subtitle--caution"
+                >!</span
+              >
+            </h6>
           </div>
         </div>
-      </a>
-
-      <a href="chat-screen(1).html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="./img/6000.png"
-              class="user-component__avatar user-component__avatar"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">류천</h4>
-              <h6 class="user-component__subtitle">
-                새 메세지가 도착했습니다
-              </h6>
+        <div class="user-component__column">
+          <i class="far fa-comment-alt fa-2x"></i>
+        </div>
+      </div>
+      <div class="icon-row">
+        <div class="icon-row__icon">
+          <i class="far fa-calendar"></i>
+          <span>Calendar</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="far fa-grin-alt"></i>
+          <span>Emoticons</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-paint-roller"></i>
+          <span>Themes</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-file-invoice-dollar"></i>
+          <span>Account</span>
+        </div>
+      </div>
+      <div class="more-suggestions">
+        <h4 class="more-suggestion__title">Suggestions</h4>
+        <div class="more-suggestions__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <img src="./img/kakao-story.jpg" />
             </div>
+            <span class="more-suggestions__icon-text">Kakao Story</span>
           </div>
-          <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
-            <div class="badge">1</div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <img src="./img/kakao-friends.jpg" />
+            </div>
+            <span class="more-suggestions__icon-text">Kakao Friends</span>
           </div>
         </div>
-      </a>
+      </div>
     </main>
 
     <nav class="nav">
@@ -93,7 +103,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">N</span>
-            <i class="fas fa-comment fa-2x"></i>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
