glassy update(incomplete)

--- a/more.html
+++ b/more.html
@@ -43,7 +43,7 @@
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Esquilo</h4>
+            <h4 class="user-component__title">노마드코린이</h4>
             <h6 class="user-component__subtitle">
               +1 925-888-1450<span class="user-component__subtitle--caution"
                 >!</span
