--- a/chat-screen.html
+++ b/chat-screen.html
@@ -49,7 +49,7 @@
         <div class="message-row__content">
           <span class="message__author">엄마</span>
           <div class="message__info">
-            <span class="message__bubble">아들 뭐해?</span>
+            <span class="message__bubble">언제 오니?</span>
             <span class="message__time">21:27</span>
           </div>
         </div>
@@ -58,7 +58,7 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">은쭈쭈쭈</span>
+            <span class="message__bubble">곧 들어가!</span>
             <span class="message__time">21:29</span>
           </div>
         </div>
