--- a/friends.html
+++ b/friends.html
@@ -48,7 +48,7 @@
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Esquilo</h4>
+            <h4 class="user-component__title">노마드코린이</h4>
             <!-- <h6 class="user-component__subtitle">This is a text</h6> -->
           </div>
         </div>
